kubernetes/apps/llm/llm-proxy/app/proxy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-proxy
  annotations:
    helm.sh/resource-policy: keep
    kustomize.toolkit.fluxcd.io/prune: disabled
    meta.helm.sh/release-name: llm-operator
    meta.helm.sh/release-namespace: llm
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: llm
    app.kubernetes.io/name: llm
    app.kubernetes.io/controller: proxy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/controller: proxy
      app.kubernetes.io/instance: llm
      app.kubernetes.io/name: llm
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: proxy
        app.kubernetes.io/instance: llm
        app.kubernetes.io/name: llm
    spec:
      automountServiceAccountToken: true
      serviceAccountName: llm
      enableServiceLinks: false
      nodeSelector:
        kubernetes.io/hostname: iggy
      containers:
        - name: proxy
          image: ghcr.io/timblakely/vllm-proxy@sha256:a6ac5c56b96cd423427c762efc6e7519551281b629956334a63423bd911e7f57
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities: {drop: [ALL]}
          resources:
            requests: {cpu: 25m, memory: 64Mi}
            limits: {memory: 256Mi}
---
apiVersion: v1
kind: Service
metadata:
  name: llm-proxy
  annotations:
    helm.sh/resource-policy: keep
    kustomize.toolkit.fluxcd.io/prune: disabled
    meta.helm.sh/release-name: llm-operator
    meta.helm.sh/release-namespace: llm
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: llm
    app.kubernetes.io/name: llm
    app.kubernetes.io/service: llm-proxy
spec:
  selector:
    app.kubernetes.io/controller: proxy
    app.kubernetes.io/instance: llm
    app.kubernetes.io/name: llm
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llm
  annotations:
    helm.sh/resource-policy: keep
    kustomize.toolkit.fluxcd.io/prune: disabled
    meta.helm.sh/release-name: llm-operator
    meta.helm.sh/release-namespace: llm
  labels:
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/instance: llm
    app.kubernetes.io/name: llm
spec:
  hostnames: ["llm-switch.${DOMAIN_NAME}"]
  parentRefs:
    - name: envoy-internal
      namespace: envoy-system
      sectionName: https
  rules:
    - backendRefs:
        - name: llm-proxy
          port: 8080
